# src/routes/user-route.ts
@@ -7,10 +7,11 @@ import { initCloudinary } from '../middlewares/cloudinary-middleware';
 
 const router = express.Router();
 
-router.get('/', userController.getUsers);
+router.get('/', authCheck, userController.getUsers);
 router.get('/search', authCheck, userController.getUserSearch);
 router.post('/', userController.createUser);
 router.get('/:id', userController.getUserById);
+router.get('/suggest', userController.getUsersSuggest);
 router.delete('/:id', userController.deleteUserById);
 router.patch('/:id', userController.updateUserById);
 router.patch(
